--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,23 @@
 <Text
-  children={`Hi.`}
+  children={`Hello 👋`}
   sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
 />
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+Hi!
+
+I'm Lake, a software engineer passionate about open source & side projects
+
+### Career
+
+- Kakaostyle (2022.01 ~ ) - Frontend Engineer
+- WantedLab (2021.01 ~ 2021.11) - Frontend Engineer
+- Zigbang (2019.01 ~ 2021.01) - Frontend(React-Native) Engineer
+- Freelancer (2018.06 ~ 2019.01) - React-Native Engineer
+- Byclip(Alticast) (2017.05 ~ 2018.06) - Software Engineer
+
+### OpenSource
+
+- [react-native-kakao-login](https://github.com/crossplatformkorea/react-native-kakao-login) ⭐️323
+- [react-native-responsive-fontSize](https://github.com/heyman333/react-native-responsive-fontSize) ⭐️603
+- [react-animated-numbers](https://github.com/heyman333/react-animated-numbers) ⭐️191
+- [react-native-animated-numbers](https://github.com/heyman333/react-native-animated-numbers)⭐️271
