feat: add banner image

--- a/content/posts/code-block-examples/index.mdx
+++ b/content/posts/code-block-examples/index.mdx
@@ -3,6 +3,7 @@ title: FE개발자 혼자서 만드는 풀스택 사이드프로젝트
 date: 2023-12-17
 tags:
   - Side Project
+banner: https://raw.githubusercontent.com/heyman333/images/main/image%20(12).png
 ---
 
 올해 my-articles 서비스를 약 두 달 정도 만든 끝에 오픈했었다. (12월 기준으로 서비스를 내렸다ㅠㅠ)
