chore: fix typo

--- a/content/posts/copilot/index.mdx
+++ b/content/posts/copilot/index.mdx
@@ -148,7 +148,7 @@ tags:
 
 ### 마치며
 
-위 내용만 보면 코파일럿을 쓰지 않읗 이유가 없다(유료이긴 하다).
+위 내용만 보면 코파일럿을 쓰지 않을 이유가 없다(유료이긴 하다).
 여기서는 간단한 코드만으로 설명해서 그렇지만, 실제로는 더 복잡한 코드를 작성하다 보면 코파일럿의 정확성은 100%가 아니다. 하지만 개발자의 효율성을 높여주는 도구로서 코파일럿의 가치는 충분히 높다.
 많은 개발자들이 코파일럿을 사용하고 나보다 더 좋은 활용법을 알아내서 쉽게 개발 하길 바란다.
 
