--- a/content/posts/whoami/index.mdx
+++ b/content/posts/whoami/index.mdx
@@ -23,7 +23,7 @@ tags:
 
 아직도 사람만나는게 좋다. 나이 들수록 사람들을 자주 안만난다는데, 퇴근하고 맥주 먹으면서 이런저런 얘기 하며 하루를 마무리 할수 있다는 것에 감사함을 느낀다. 물론 취향은 확실해져서 보기 싫은 사람 있으면 안간다.
 
-조금 더 치열하게 공부하고 일 해야겠다. 아직 모르는게 너무 많고, 주변에 열심히 하는데 성실한 사람이 너무 많다. 내 가치는 내가 증명 해야지.
+조금 더 치열하게 공부하고 일 해야겠다. 아직 모르는게 너무 많고, 똑똑한데 성실한 사람이 주변에 너무 많다. 내 가치는 내가 증명 해야지.
 
 올해도 결국 운동하고 책읽고 공부하고 돈 더 많이 벌기
 
