--- a/content/posts/llm-ttd/index.mdx
+++ b/content/posts/llm-ttd/index.mdx
@@ -95,7 +95,7 @@ LLM의 등장으로 TDD의 실현 가능성이 비약적으로 높아졌다. Git
 
 ### 서버
 ✅ 1. GitHub OAuth 인증 엔드포인트
-```typescript
+```ts
 // tests/auth/github.test.ts
 import request from 'supertest'
 import app from '../../src/app'
@@ -109,7 +109,7 @@ describe('GitHub OAuth 인증 엔드포인트', () => {
 })
 ```
 ✅ 2. 인증 콜백 처리 + 세션(JWT 발급) 테스트
-```typescript
+```ts
 import jwt from 'jsonwebtoken'
 import request from 'supertest'
 import app from '../../src/app'
@@ -143,7 +143,7 @@ describe('GitHub OAuth 콜백 처리', () => {
 })
 ```
 ✅ 3. JWT 검증 및 세션 만료 테스트
-```typescript
+```ts
 import jwt from 'jsonwebtoken'
 
 describe('JWT 토큰 처리', () => {
@@ -162,7 +162,7 @@ describe('JWT 토큰 처리', () => {
 })
 ```
 ✅ 4. GitHub API 연동 Mock 테스트
-```typescript
+```ts
 import * as githubService from '../../src/services/github'
 import nock from 'nock'
 
@@ -187,7 +187,7 @@ describe('GitHub API 연동', () => {
 })
 ```
 ✅ 5. DB 연동 (findOrCreateUser) 테스트
-```typescript
+```ts
 import * as db from '../../src/services/database'
 
 describe('DB 연동 테스트', () => {
@@ -214,7 +214,7 @@ describe('DB 연동 테스트', () => {
 ```
 
 ✅ 6. 에러 처리 테스트
-```typescript
+```ts
 describe('에러 처리', () => {
   it('콜백 요청 시 code 없음 → 400', async () => {
     const res = await request(app).get('/api/auth/github/callback')
@@ -446,9 +446,10 @@ describe('로그아웃 처리', () => {
 ```
 위의 스펙을 Cursor와 ChatGPT에게 알려주고 테스트코드 작성을 요청했다.
 
+이제 개발자는 생성된 테스트 코드를 기반으로 안정적이고 견고한 서비스를 구현할 수 있다.
 
-TDD는 개발 프로세스를 더욱 안정적이고 체계적으로 만들어줄 뿐만 아니라, 코드의 품질과 신뢰성을 크게 향상시킬 수 있다. TDD는 단순한 테스트 작성을 넘어서 설계 방법론으로서의 가치를 지니며, 이는 소프트웨어의 유지보수성과 확장성을 보장하는 핵심 요소가 될 수 있다.
+TDD는 개발 프로세스를 체계화하고 코드의 품질과 신뢰성을 높여준다. 단순한 테스트 작성을 넘어 설계 방법론으로서의 가치가 있으며, 이는 소프트웨어의 유지보수와 확장을 용이하게 한다.
 
-앞서 살펴본 예시들을 통해 LLM이 어떻게 TDD 프로세스를 지원하고 개선할 수 있는지 확인했다. 이러한 도구들을 적절히 활용한다면, 테스트 주도 개발은 더 이상 부담스러운 작업이 아닌, 자연스러운 개발 문화로 자리잡을 수 있을 것이다.
+LLM의 등장으로 TDD는 더 이상 부담스러운 작업이 아니다. 앞서 살펴본 예시처럼 AI가 테스트 코드 작성을 도와주면서, TDD는 자연스러운 개발 문화가 될 수 있다.
 
-개발자들이 이 글을 통해 테스트 코드 작성의 중요성을 재인식하고, TDD가 현대 소프트웨어 개발의 필수적인 부분으로 받아들여지기를 희망한다.
+이 글을 통해 개발자들이 테스트 코드의 중요성을 다시 한번 생각해보고, TDD를 현대 소프트웨어 개발의 필수 요소로 받아들이길 바란다.
