--- a/content/posts/llm-ttd/index.mdx
+++ b/content/posts/llm-ttd/index.mdx
@@ -29,7 +29,7 @@ TDD는 개인 차원의 선택보다는 팀 단위의 공감과 실행이 중요
 
 LLM의 등장으로 TDD의 실현 가능성이 비약적으로 높아졌다. GitHub OAuth 인증 기능을 예시로, AI가 테스트 코드 작성을 어떻게 보조하는지 살펴본다.
 
-먼저 깃헙 로그인을 위해서 어떤 기능이 필요한지 스펙을 먼저 정할 수 있다.
+깃헙 로그인을 위해서 어떤 기능이 필요한지 스펙을 먼저 정할 수 있다.
 
 ### 서버
 1. GitHub OAuth 인증 엔드포인트 구현
