--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,4 +1,4 @@
 <Title text="Side Projects" />
 
 - [DUMBS](https://www.dumbs.app/)
-- [WorkMate](https://work-mate-landing-lpge.vercel.app/)
+- [All about AI for developers](https://ai-for-developer.vercel.app/)
