--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -9,7 +9,8 @@ I'm Lake, a software engineer passionate about open source & side projects
 
 ### Career
 
-- Kakaostyle (2022.01 ~ ) - Frontend Engineer
+- MonyMony (2025.08 ~ ) - AI Native Fullstack Engineer
+- Kakaostyle (2022.01 ~ 2025.07) - Frontend Engineer
 - WantedLab (2021.01 ~ 2021.11) - Frontend Engineer
 - Zigbang (2019.01 ~ 2021.01) - Frontend(React-Native) Engineer
 - Freelancer (2018.06 ~ 2019.01) - React-Native Engineer
